--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,29 @@
         android:theme="@style/Theme.PowerCalc_1"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".CyR"
+            android:exported="false" />
+        <activity
+            android:name=".VyR"
+            android:exported="false" />
+        <activity
+            android:name=".SpalshScreen"
             android:exported="true">
-
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+        <activity
+            android:name=".VyC"
+            android:exported="true" />
+        <activity
+            android:name=".Menu"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
